OMG FINALLY FIXED THE WRAPPING ISSUE OF THE NAV HOLY SHIT!

--- a/css/custom.css
+++ b/css/custom.css
@@ -162,18 +162,7 @@ hr.style2 {
 	margin-left: auto; 
 	margin-right: auto;
 }
-.numberCircle {
-	border-radius: 50%;
-	width: 35px; 
-	height: 35px;
-	font-size: 30px;
-	border: 3px solid black;
-	float: left;
-	margin-right: 10px;
-	background-color: black;
-	color: white;
-	margin-top: 14px;
-}
+
 .numberCircle span {
 	text-align: center;
 	line-height: 29px;
@@ -201,6 +190,7 @@ hr.style2 {
 	float: right;
 	letter-spacing: 1.5px;
 	text-transform: uppercase;
+	white-space: nowrap;
 }
 .nav-pills {
 	margin-top: 0px;
@@ -212,6 +202,9 @@ hr.style2 {
 }
 .nav-pills a{
 	color: black;
+}
+.nav-pills > li + li {
+	margin-left: 0px;
 }
 
 .navbar-nav {
@@ -239,14 +232,16 @@ hr.style2 {
 	bottom: 0; 
 	right: 0; 
 	padding-top: 1px; 
-	padding bottom: 1px;
+	padding-bottom: 1px;
 }
 .nav-container {
 	position: static; 
 	right: 0; 
 	z-index: 1; 
 	padding-bottom: 5px; 
-	padding-top: 5px;
+	display: inline-block;
+	padding-left: 0px;
+	padding-right: 0px;
 }
 .btn-default {
 	background-color: rgba(0, 0, 0, 0);
@@ -340,7 +335,7 @@ hr.style2 {
 	
 }
 .name {
-    font-size:3.1em !important;
+    font-size:2.5em !important;
     text-align:left;
     font-family: 'Roboto', sans-serif;
 	font-weight: 200;
@@ -470,7 +465,7 @@ th, td {
 @media (min-width:500px) {
 
 	li {
-		margin-left: 40px;
+		
 	}
 	.p-indented	 {
 		margin-left: 60px;
